cynic-querygen/tests/snapshots/github_tests__add_comment_mutation.snap
---
source: cynic-querygen/tests/github-tests.rs
expression: "cynic_querygen :: Generator ::\nnew(schema).expect(\"schema parse failed\").generate(query).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryVariables, Debug)]
pub struct CommentOnMutationSupportIssueVariables<'a> {
    pub comment_body: &'a str,
}

#[derive(cynic::QueryFragment, Debug)]
#[cynic(graphql_type = "Mutation", variables = "CommentOnMutationSupportIssueVariables")]
pub struct CommentOnMutationSupportIssue {
    #[arguments(input: { subjectId: "MDU6SXNzdWU2ODU4NzUxMzQ=", body: $comment_body })]
    pub add_comment: Option<AddCommentPayload>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct AddCommentPayload {
    pub comment_edge: Option<IssueCommentEdge>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct IssueCommentEdge {
    pub node: Option<IssueComment>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct IssueComment {
    pub id: cynic::Id,
}
