cynic-querygen/tests/snapshots/github_tests__fragment_on_interface.snap
---
source: cynic-querygen/tests/github-tests.rs
expression: "cynic_querygen :: Generator ::\nnew(schema).expect(\"schema parse failed\").generate(query).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryFragment, Debug)]
pub struct Query {
    #[arguments(ids: ["123"])]
    pub nodes: Vec<Option<NodeInfo>>,
}

#[derive(cynic::QueryFragment, Debug)]
#[cynic(graphql_type = "Node")]
pub struct NodeInfo {
    pub __typename: String,
    pub id: cynic::Id,
}
