cynic-querygen/tests/snapshots/github_tests__input_object_literals.snap
---
source: cynic-querygen/tests/github-tests.rs
expression: "cynic_querygen :: Generator ::\nnew(schema).expect(\"schema parse failed\").generate(query).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryFragment, Debug)]
#[cynic(graphql_type = "Query")]
pub struct PullRequestTitles {
    #[arguments(name: "cynic", owner: "obmarg")]
    pub repository: Option<Repository>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct Repository {
    #[arguments(orderBy: { field: "CREATED_AT", direction: "ASC" })]
    pub pull_requests: PullRequestConnection,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct PullRequestConnection {
    pub nodes: Option<Vec<Option<PullRequest>>>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct PullRequest {
    pub title: String,
}
