cynic-querygen/tests/snapshots/github_tests__queries_with_typename.snap
---
source: cynic-querygen/tests/github-tests.rs
expression: "cynic_querygen :: Generator ::\nnew(schema).expect(\"schema parse failed\").generate(query).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryFragment, Debug)]
pub struct Query {
    #[arguments(owner: "obmarg", name: "cynic")]
    pub repository: Option<Repository>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct Repository {
    #[arguments(number: 1)]
    pub issue_or_pull_request: Option<IssueOrPullRequest>,
    #[arguments(first: 1)]
    pub issues: IssueConnection,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct IssueConnection {
    pub edges: Option<Vec<Option<IssueEdge>>>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct IssueEdge {
    pub node: Option<Issue>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct Issue {
    pub __typename: String,
    pub author: Option<Actor>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct Actor {
    pub login: String,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct PullRequest {
    pub __typename: String,
    pub id: cynic::Id,
    pub title: String,
}

#[derive(cynic::QueryFragment, Debug)]
#[cynic(graphql_type = "Issue")]
pub struct Issue2 {
    pub __typename: String,
    pub id: cynic::Id,
    pub title: String,
    pub last_edited_at: Option<DateTime>,
}

#[derive(cynic::InlineFragments, Debug)]
pub enum IssueOrPullRequest {
    Issue2(Issue2),
    PullRequest(PullRequest),
    #[cynic(fallback)]
    Unknown
}

#[derive(cynic::Scalar, Debug, Clone)]
pub struct DateTime(pub String);
