cynic-querygen/tests/snapshots/github_tests__skip.snap
---
source: cynic-querygen/tests/github-tests.rs
expression: "cynic_querygen :: Generator ::\nnew(schema).expect(\"schema parse failed\").generate(query).expect(\"QueryGen Failed\")"
snapshot_kind: text
---
#[derive(cynic::QueryVariables, Debug)]
pub struct QueryVariables {
    pub skip_all: bool,
}

#[derive(cynic::QueryFragment, Debug)]
#[cynic(variables = "QueryVariables")]
pub struct Query {
    #[arguments(owner: "obmarg", name: "cynic")]
    #[directives(skip(if: $skip_all))]
    pub repository: Option<Repository>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct Repository {
    #[arguments(number: 1)]
    #[directives(skip(if: false))]
    pub issue_or_pull_request: Option<IssueOrPullRequest>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct PullRequest {
    pub id: cynic::Id,
    pub title: String,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct Issue {
    pub id: cynic::Id,
    pub title: String,
    pub last_edited_at: Option<DateTime>,
}

#[derive(cynic::InlineFragments, Debug)]
pub enum IssueOrPullRequest {
    Issue(Issue),
    PullRequest(PullRequest),
    #[cynic(fallback)]
    Unknown
}

#[derive(cynic::Scalar, Debug, Clone)]
pub struct DateTime(pub String);
